<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crm7demoproject.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/inWareHouse"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_custom"
            android:onClick="inWareHouse"
            android:text="@string/inWareHouse" />

        <Button
            android:id="@+id/outWareHouse"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_custom"
            android:onClick="outWareHouse"
            android:text="@string/outWareHouse" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/query"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_custom"
            android:onClick="query"
            android:text="@string/queryWareHouse" />

        <Button
            android:id="@+id/checkWareHouse"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_custom"
            android:onClick="checkWareHouse"
            android:text="@string/checkWareHouse" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/getMat"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_custom"
            android:onClick="matInfoQuery"
            android:text="@string/getMat" />

        <Button
            android:id="@+id/matStateQuery"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_custom"
            android:onClick="matStateQuery"
            android:text="@string/matStateQuery" />
    </LinearLayout>

</LinearLayout>