<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crm7demoproject.QueryActivity" >

    <Button
        android:id="@+id/query_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="49dp"
        android:layout_marginRight="30dp"
        android:text="@string/query_back"
        android:onClick="queryBack" />

    <Button
        android:id="@+id/query_matIno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="92dp"
        android:text="@string/query_matIno" 
        android:onClick="queryMatIno"/>

    <Button
        android:id="@+id/query_transport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/query_matIno"
        android:layout_centerVertical="true"
        android:text="@string/query_transport" 
        android:onClick="queryTransport"/>

</RelativeLayout>
