<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:orientation="vertical"   
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content"  
    android:minWidth="280dip"  
    android:background="#FFFFFFFF">  
       
    <TextView  
        android:id="@+id/dialog_title"  
        android:layout_width="fill_parent"  
        android:layout_height="40.0dip"  
        android:gravity="center_vertical"  
        android:paddingLeft="10.0dip"  
        android:text="@string/dialog_title"  
        android:textStyle="bold"  
        android:textColor="#0087CB"/>  
       
    <ImageView  
        android:layout_height="wrap_content"  
        android:layout_width="fill_parent"  
        android:background="@drawable/dialog_sparator"/>  
       
    <LinearLayout   
        android:id="@+id/dialog_content"  
        android:orientation="vertical"  
        android:layout_height="wrap_content"  
        android:layout_width="fill_parent">  
        <TextView  
            android:id="@+id/dialog_message"  
            android:layout_width="fill_parent"  
            android:layout_height="50.0dip"  
            android:gravity="center_vertical"  
            android:paddingLeft="10dip"  
            android:text="@string/dialog_msg"  
            android:textSize="20sp"  
            android:textStyle="bold"  
            android:textColor="#707070"/>  
    </LinearLayout>  
       
    <LinearLayout  
        android:orientation="horizontal"  
        android:layout_width="fill_parent"  
        android:layout_height="50.0dip"  
        android:layout_alignParentTop="true"  
        android:gravity="center">

        <Button
            android:id="@+id/dialog_confirm"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:background="@drawable/dlg_exit_nomal"
            android:text="@string/dialog_exit"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dialog_back"
            android:layout_width="120dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:background="@drawable/dlg_bck_nomal"
            android:text="@string/dialog_back"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
  
    </LinearLayout>  
               
</LinearLayout>