<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crm7demoproject.OutWareHouseActivity" >

    <Button
        android:id="@+id/out_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="outBack"
        android:text="@string/out_back" />

    <EditText
        android:id="@+id/out_queryInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/out_back"
        android:layout_alignRight="@+id/out_back"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:enabled="true"
        android:focusable="false"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="9"
        android:minLines="9"
        android:scrollbars="vertical" >
    </EditText>

    <Button
        android:id="@+id/out_wareHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/out_back"
        android:layout_alignBottom="@+id/out_back"
        android:layout_alignLeft="@+id/out_queryInfo"
        android:onClick="outWareHouse"
        android:text="@string/out_wareHouse" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/out_queryInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/out_inputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/out_inputText" 
            android:focusableInTouchMode="true" 
            android:inputType="textPersonName"
            >
            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_carNum" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_driverCard" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>