<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crm7demoproject.MatStateQueryActivity" >

    <TextView
        android:id="@+id/mat_steelGradeNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:text="@string/mat_steelGradeNum" />

    <EditText
        android:id="@+id/mat_steelGradeNumScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mat_steelGradeNum"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:ems="10" 
        android:inputType="text">
    </EditText>

        <EditText
            android:id="@+id/mat_queryInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mat_steelGradeNum"
            android:layout_alignParentBottom="true"
            android:background="@android:drawable/edit_text"
            android:ems="10"
            android:enabled="true"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:maxLines="13"
            android:minLines="13"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/mat_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/mat_steelGradeNumScan"
            android:layout_below="@+id/mat_steelGradeNumScan"
            android:layout_marginTop="29dp"
            android:onClick="matBack"
            android:text="@string/mat_back" />

        <Button
            android:id="@+id/mat_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/mat_back"
            android:layout_alignBottom="@+id/mat_back"
            android:layout_alignLeft="@+id/mat_steelGradeNum"
            android:layout_marginLeft="18dp"
            android:text="@string/mat_clear"
            android:onClick="matClear" />

</RelativeLayout>
